# tracekit

./: .gitignore  Cargo.toml  README.md  SKILL.md
crates/tracekit-cli/: Cargo.toml
crates/tracekit-cli/src/: main.rs
crates/tracekit-cli/src/commands/: analyze.rs  capture.rs  list.rs  mod.rs  report.rs
crates/tracekit-core/: Cargo.toml
crates/tracekit-core/src/: detectors.rs  lib.rs  pricing.rs  schema.rs
crates/tracekit-ingest/: Cargo.toml
crates/tracekit-ingest/src/: claude.rs  codex.rs  lib.rs  opencode.rs
crates/tracekit-report/: Cargo.toml
crates/tracekit-report/src/: html.rs  json.rs  lib.rs  terminal.rs
